--- a/index.html
+++ b/index.html
@@ -97,34 +97,34 @@
      <section class="galarey" id="history">
          <h1 class="title">صور مكة المكرمة خلال 100 عام الماضية وحتى 2020</h1>
     <div class="container">
-        <div class="panel active" style="background-image: url('/image/12.jpg')">
+        <div class="panel active" style="background-image: url('/src/images/12.jpg')">
             <h3>مكة المكرمة 1910م</h3>
         </div>
-        <div class="panel " style="background-image: url('/image/14.jpg')">
+        <div class="panel " style="background-image: url('/src/images/14.jpg')">
             <h3>مكة المكرمة 1920م</h3>
         </div>
-        <div class="panel " style="background-image:url('/image/8.jpg')">
+        <div class="panel " style="background-image:url('/src/images/8.jpg')">
             <h3>مكة المكرمة 1930م</h3>
         </div>
-        <div class="panel " style="background-image:url('/image/9.jpg')">
+        <div class="panel " style="background-image:url('/src/images/9.jpg')">
             <h3>مكة المكرمة 1940م</h3>
         </div>
-        <div class="panel " style="background-image:url('/image/11.jpg')">
+        <div class="panel " style="background-image:url('/src/images/11.jpg')">
             <h3>مكة المكرمة 1950م</h3>
         </div>
-        <div class="panel " style="background-image:url('/image/10.jpg')">
+        <div class="panel " style="background-image:url('/src/images/10.jpg')">
             <h3>مكة المكرمة 1960م</h3>
         </div>
-        <div class="panel " style="background-image:url('/image/4.jpg')">
+        <div class="panel " style="background-image:url('/src/images/4.jpg')">
             <h3>مكة المكرمة 1970م</h3>
         </div>
-        <div class="panel " style="background-image:url('/image/22.jpg')">
+        <div class="panel " style="background-image:url('/src/images/22.jpg')">
             <h3>مكة المكرمة 1995م</h3>
         </div>
-        <div class="panel " style="background-image:url('/image/18.jpg')">
+        <div class="panel " style="background-image:url('/src/images/18.jpg')">
             <h3>مكة المكرمة 2014م</h3>
         </div>
-        <div class="panel " style="background-image:url('/image/19.webp')">
+        <div class="panel " style="background-image:url('/src/images/19.webp')">
             <h3>مكة المكرمة 2020م</h3>
         </div>
     </div>
