--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
      <section class="galarey" id="history">
          <h1 class="title">صور مكة المكرمة خلال 100 عام الماضية وحتى 2020</h1>
     <div class="container">
-        <div class="panel active" style="background-image: url('/src/images/12.jpg')">
+        <div class="panel active" style="background-image: url('image/12.jpg')">
             <h3>مكة المكرمة 1910م</h3>
         </div>
-        <div class="panel " style="background-image: url('/src/images/14.jpg')">
+        <div class="panel " style="background-image: url('src/images/14.jpg')">
             <h3>مكة المكرمة 1920م</h3>
         </div>
-        <div class="panel " style="background-image:url('/src/images/8.jpg')">
+        <div class="panel " style="background-image:url('src/images/8.jpg')">
             <h3>مكة المكرمة 1930م</h3>
         </div>
         <div class="panel " style="background-image:url('/src/images/9.jpg')">
